--- a/src/features/projects/ProjectsList/ProjectsList.module.scss
+++ b/src/features/projects/ProjectsList/ProjectsList.module.scss
@@ -1,9 +1,7 @@
 @import '../../../styles/theme';
 
 .root {
-  // @apply flex
-  //   flex-col
-  //   mt-6;
+  margin-top: $theme-spacing-xl;
 }
 
 .card {
