--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -7,7 +7,9 @@ $theme-spacing-sm: 10px;
 $theme-spacing-md: 16px;
 $theme-spacing-lg: 26px;
 $theme-spacing-xl: 36px;
+$theme-spacing-xxl: 48px;
 $theme-font-size-sm: 0.6rem;
 $theme-font-size-md: 1rem;
 $theme-font-size-lg: 1.5rem;
 $theme-font-size-xl: 2.25rem;
+$theme-shell-width: 68rem;
