--- a/src/features/layout/Header/Header.module.scss
+++ b/src/features/layout/Header/Header.module.scss
@@ -11,7 +11,9 @@
   flex: 1 1 0%;
   margin-left: auto;
   margin-right: auto;
-  max-width: 64rem;
+  max-width: $theme-shell-width;
+  padding-left: $theme-spacing-lg;
+  padding-right: $theme-spacing-lg;
   justify-content: space-between;
 }
 
