--- a/src/features/layout/Header/Header.module.scss
+++ b/src/features/layout/Header/Header.module.scss
@@ -2,19 +2,35 @@
 
 .root {
   background-color: rgb(51, 51, 51);
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  height: 4rem;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  z-index: 10;
 }
 
 .body {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex: 1 1 0%;
+  // flex: 1 1 0%;
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 0%;
   margin-left: auto;
   margin-right: auto;
   max-width: $theme-shell-width;
   padding-left: $theme-spacing-lg;
   padding-right: $theme-spacing-lg;
-  justify-content: space-between;
+  justify-content: center;
+  height: 100%;
+  @include respond-above(sm) {
+    justify-content: space-between;
+  }
 }
 
 .title {
@@ -23,4 +39,12 @@
   font-size: $theme-font-size-lg;
   line-height: $theme-font-size-lg;
   padding: $theme-spacing-md 0;
+  color: white;
+}
+
+.nav {
+  display: none;
+  @include respond-above(sm) {
+    display: flex;
+  }
 }
