--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -1,15 +1,3 @@
-$theme-background: #1e1e1e;
-$theme-text-color: #d4d4d4;
-$theme-link-color: #569cd6;
-$theme-heading-color: #ce9178;
-$theme-tags-color: #73c991;
-$theme-spacing-sm: 10px;
-$theme-spacing-md: 16px;
-$theme-spacing-lg: 26px;
-$theme-spacing-xl: 36px;
-$theme-spacing-xxl: 48px;
-$theme-font-size-sm: 0.6rem;
-$theme-font-size-md: 1rem;
-$theme-font-size-lg: 1.5rem;
-$theme-font-size-xl: 2.25rem;
-$theme-shell-width: 68rem;
+@import './variables';
+@import './mixins';
+@import './placeholders';
