--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,22 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500&display=swap');
 @import 'node_modules/modern-normalize/modern-normalize';
+// @import './node_modules/@vscode/codicons/dist/codicon';
 @import './theme';
 
-html,
-body {
-}
 body {
   background-color: $theme-background;
-}
-body::-webkit-scrollbar {
-  border-left: 1px solid #333;
+  @include scrollbar(14px);
 }
 
-body::-webkit-scrollbar-thumb {
-  background: #333;
-  border-left: 1px solid #333;
-}
-
+ul,
+ol,
 blockquote,
 dd,
 dl,
