Various UI fixes

--- a/src/features/layout/PageShell/PageShell.module.scss
+++ b/src/features/layout/PageShell/PageShell.module.scss
@@ -14,7 +14,7 @@
   scroll-margin-top: 10rem;
   padding-left: $theme-spacing-lg;
   padding-right: $theme-spacing-lg;
-  padding-top: 6.2rem;
+  padding-top: $theme-spacing-md * 6;
   padding-bottom: $theme-spacing-xl;
   // margin: $theme-spacing-lg;
 }
