--- a/src/features/pages/HomePage/HomePage.module.scss
+++ b/src/features/pages/HomePage/HomePage.module.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  min-height: 100vh;
+  min-height: 100%;
 }
 
 .title {
