--- a/src/features/layout/Typography/Typography.module.scss
+++ b/src/features/layout/Typography/Typography.module.scss
@@ -101,4 +101,11 @@
     padding: $theme-spacing-md;
     background: rgb(26, 26, 26);
   }
+
+  img {
+    max-width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+  }
 }
