--- a/src/features/layout/Typography/Typography.module.scss
+++ b/src/features/layout/Typography/Typography.module.scss
@@ -103,9 +103,16 @@
   }
 
   img {
-    max-width: 95%;
     margin-left: auto;
     margin-right: auto;
     display: block;
+    border: 1px solid #333;
+    max-width: 92%;
+    @include respond-above(sm) {
+      max-width: 82%;
+    }
+    @include respond-above(md) {
+      max-width: 72%;
+    }
   }
 }
