Fix heading order

--- a/src/features/layout/Card/Card.module.scss
+++ b/src/features/layout/Card/Card.module.scss
@@ -27,6 +27,7 @@
   margin-bottom: $theme-spacing-md;
   margin-top: 0;
   color: $theme-link-color;
+  font-size: $theme-font-size-lg;
 }
 
 .content {
