--- a/src/features/blog/PostHeader/PostHeader.module.scss
+++ b/src/features/blog/PostHeader/PostHeader.module.scss
@@ -2,20 +2,13 @@
 
 .title {
   margin-top: 0;
+  margin-bottom: $theme-spacing-md;
 }
 
 .date {
-  @include spacing;
+  margin-bottom: $theme-spacing-lg;
 }
 
 .back-link {
   margin-bottom: $theme-spacing-lg;
-  // @apply text-sm
-  //   sm:text-base
-  //   mb-6
-  //   sm:mb-8
-  //   inline-block
-  //   font-medium;
-  // color: #9cdcfe;
-  // font-weight: normal;
 }
