--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -14,7 +14,9 @@ $theme-spacing-xl: 36px;
 $theme-spacing-xxl: 48px;
 $theme-font-size-sm: 0.6rem;
 $theme-font-size-base: 1rem;
+$theme-line-height-base: 1.5rem;
 $theme-font-size-md: 1.05rem;
+$theme-line-height-md: 1.55rem;
 $theme-font-size-lg: 1.4rem;
 $theme-font-size-xl: 1.8rem;
 $theme-font-size-xxl: 2.25rem;
