Minor UI improvements

--- a/src/features/pages/HomePage/HomePage.module.scss
+++ b/src/features/pages/HomePage/HomePage.module.scss
@@ -36,7 +36,7 @@
     font-size: $theme-font-size-xl;
   }
   &:not(:last-child) {
-    margin-right: $theme-spacing-md;
+    margin-right: $theme-spacing-lg;
   }
 }
 
