Add pointer cursor to details summary

--- a/src/features/layout/Typography/Typography.module.scss
+++ b/src/features/layout/Typography/Typography.module.scss
@@ -74,6 +74,12 @@
     padding: 1px 4px;
   }
 
+  details {
+    summary {
+      cursor: pointer;
+    }
+  }
+
   pre {
     @include scrollbar;
     margin-top: $theme-spacing-lg;
