Improve mobile nav

--- a/src/features/layout/MobileNav/MobileNav.module.scss
+++ b/src/features/layout/MobileNav/MobileNav.module.scss
@@ -38,3 +38,16 @@
 .menu-button-label {
   @include screen-reader-only;
 }
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 1;
+  background-color: transparent;
+  @include respond-above(sm) {
+    display: none;
+  }
+}
