--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -12,6 +12,7 @@ $theme-spacing-md: 16px;
 $theme-spacing-lg: 26px;
 $theme-spacing-xl: 36px;
 $theme-spacing-xxl: 48px;
+$theme-spacing-2xl: 58px;
 $theme-font-size-sm: 0.6rem;
 $theme-font-size-base: 1rem;
 $theme-line-height-base: 1.5rem;
@@ -21,4 +22,5 @@ $theme-font-size-lg: 1.4rem;
 $theme-font-size-xl: 1.8rem;
 $theme-font-size-xxl: 2.25rem;
 $theme-font-size-2xl: 3.5rem;
+$theme-font-size-3xl: 4.5rem;
 $theme-shell-width: 68rem;
