--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -5,6 +5,9 @@ html,
 body {
   height: 100%;
 }
+.tickLabel {
+  // font-size: 30px !important;
+}
 
 body {
   background-color: $theme-background;
