Create new stack

--- a/.github/pr-comment-template.hbs
+++ b/.github/pr-comment-template.hbs
@@ -31,7 +31,7 @@ The following Stack changes will be applied:
 {{#if inputs.previewBranch}}
 **Site Deploy**
 
-🎉 Preview site deployed to: https://{{inputs.previewBranch}}.preview.static-example.richardwillis.info
+🎉 Preview site deployed to: https://{{inputs.previewBranch}}.preview.richardwillis.info
 {{/if}}
 
 `{{id}}`
